--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
@@ -5,6 +5,27 @@
 #parse('inc/meta.html')
 </head>
 <body>
+<div id="header">
+  <h1><a href="index.html">#text('title')</a></h1>
+</div>
+
+<!--top-Header-menu-->
+<div id="user-nav" class="navbar navbar-inverse">
+  <ul class="nav">
+  </ul>
+</div>
+<div id="search">
+</div>
+<!--close-top-Header-menu-->
+
+<!--sidebar-menu-->
+#bundle('general')
+<div id="sidebar"><a href="#" class="visible-phone"><i class="icon icon-home"></i>#text('dashboard')</a>
+  <ul>
+  </ul>
+</div>
+#end
+<!--sidebar-menu-->
 
 #parse('inc/scripts.html')
 <script src="${request.contextPath}/lib/require/require.js" data-main="${request.contextPath}/s/admin_console/main.js"></script>
