Migrated nSection directive from hats.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
@@ -91,7 +91,7 @@
 
 <!--main-container-part-->
 <div id="workbench" class="pane ui-layout-center">
-  <div class="container-fluid">
+  <div class="fill" n-section="{{workbench||'workbench.home'}}">
   </div>
 </div>
 
