--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -1,7 +1,8 @@
 define(function() {
 
 var sections = [{
-    name: ''
+    name: 'admin_console.prefs.edit',
+    templateUrl: window.contextPath + '/admin_console/prefs/edit.html'
 }];
 
 return sections;
