--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/login.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/login.html
@@ -5,48 +5,58 @@
 <head>
 #parse('inc/meta.html')
 <title>#text('title')</title>
+<link rel="stylesheet" type="text/css" href="${request.contextPath}/lib/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="${request.contextPath}/lib/bootstrap/css/bootstrap-theme.min.css">
+<link rel="stylesheet" type="text/css" href="${request.contextPath}/lib/fontawesome/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="${request.contextPath}/matrix/css/login.css">
 </head>
 <body class="matrix">
-<div class="container login-form">
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
-    <div class="panel panel-default panel-portal">
-        <div class="panel-heading">
-            <h3 class="panel-title">用户登录</h3>
+<div id="loginbox">
+    <form class="form-horizontal form-vertical" method="post">
+        <div class="form-group normal_text">
+            <h3><img src="${request.contextPath}/matrix/img/logo.png" alt="Logo"></h3>
         </div>
-        <div class="panel-body">
-            <form class="form-horizontal" method="post">
-                <div class="form-group">
-                    <label for="login" class="col-sm-2 control-label">登录名</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="login"
-                            name="username" placeholder="登录名">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">口令</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password"
-                            name="password" placeholder="口令">
-                    </div>
-                </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-1">
+	            <div class="main_input_box">
+	                <div class="input-group">
+	                    <span class="input-group-addon bg_lg"><i class="fa fa-user"></i></span>
+	                    <input type="text" class="form-control" id="login"
+	                        name="username" placeholder="#text('login.login')">
+	                </div>
+	            </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class=" col-sm-10 col-sm-offset-1">
+	            <div class="main_input_box">
+	                <div class="input-group">
+		                <span class="input-group-addon bg_ly"><i class="fa fa-unlock"></i></span>
+		                <input type="password" class="form-control" id="password"
+		                    name="password" placeholder="#text('login.password')">
+	                </div>
+	            </div>
+            </div>
+        </div>
 #if ($request.getAttribute('shiroLoginFailure'))
-                <div class="form-group">
-                    <div class="text-warning col-sm-10 col-sm-offset-2">#text('login_failure')</div>
-                </div>
-#end
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <button type="submit" class="btn btn-block btn-success">登录</button>
-                    </div>
-                </div>
-            </form>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-1 alert alert-danger">
+                <a class="close" data-dismiss="alert" href="#">×</a>
+                <h5>#text('error')</h5>
+                #text('login_failure')
+            </div>
         </div>
-    </div>
-</div>
-</div>
+#end
+        <div class="form-group form-actions">
+            <div class="col-sm-12">
+                <button type="submit" class="btn btn-success pull-right">#text('login.submit')</button>
+            </div>
+        </div>
+    </form>
 </div>
 
+<script type="text/javascript" src="${request.contextPath}/lib/jquery/jquery-2.2.0.min.js"></script>
+<script type="text/javascript" src="${request.contextPath}/lib/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(function() {
     $('#login').focus();
