--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -3,6 +3,9 @@ define(function() {
 var sections = [{
     name: 'admin_console.prefs.edit',
     templateUrl: window.contextPath + '/admin_console/prefs/edit.html'
+}, {
+	name: 'admin_console.change_password',
+	templateUrl: window.contextPath + '/admin_console/changepassword.html'
 }];
 
 return sections;
