Defined data source definition page.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/menu.js.html
@@ -17,6 +17,13 @@ var mainMenu = [{
     templateUrl: window.contextPath + '/admin_console/prefs.html',
     requireModule: 's/admin_console/prefs',
     controller: 'admin_console.prefs'
+}, {
+    name: 'admin_console.ds',
+    text: '#text('menu.ds')',
+    iconClass: 'fa fa-database',
+    templateUrl: window.contextPath + '/admin_console/ds.html',
+    requireModule: 's/admin_console/ds',
+    controller: 'admin_console.ds'
 }];
 #end
 #end
