--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -4,8 +4,11 @@ var sections = [{
     name: 'admin_console.prefs.edit',
     templateUrl: window.contextPath + '/admin_console/prefs/edit.html'
 }, {
-	name: 'admin_console.change_password',
-	templateUrl: window.contextPath + '/admin_console/changepassword.html'
+    name: 'admin_console.change_password',
+    templateUrl: window.contextPath + '/admin_console/changepassword.html'
+}, {
+    name: 'admin_console.ds.edit',
+    templateUrl: window.contextPath + '/admin_console/ds/edit.html'
 }];
 
 return sections;
