Fixed problem that URL cannot be saved to data source definition.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds/edit.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds/edit.html
@@ -26,7 +26,7 @@
         <label class="col-sm-2 control-label no-padding-right" for="ds_url">#text('ds.url.title')</label>
 
         <div class="col-sm-6">
-            <textarea ng-model="editingItem.value" id="ds_url" class="form-control" rows="5" ng-maxlength="50"></textarea>
+            <textarea ng-model="editingItem.url" id="ds_url" class="form-control" rows="5"></textarea>
         </div>
         <div class="col-sm-4 help-inline">
             #text('ds.url.inputhint')
