User-defined Data Sources are written to a local IoC configuration file.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds.html
@@ -12,6 +12,10 @@
                 <i class="fa fa-plus"></i>
                 #text('add')
             </button>
+            <button class="btn btn-xs btn-primary" ng-click="write();">
+                <i class="fa fa-plus"></i>
+                #text('ds.write.config')
+            </button>
         </div>
     </div>
     <div class="widget-content nopadding ui-layout-center auto-scroll">
