--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/index.html
@@ -38,50 +38,31 @@
 
 <div class="panel-group" id="sidebar-accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default" ng-repeat="itm in mainMenu">
-    <div class="panel-heading">
+    <div class="panel-heading" ng-if="!itm.children||!itm.children.length">
       <h4 class="panel-title">
         <a role="button" ng-click="itm.templateUrl && openView(itm, itm.path)">
           <i ng-class="itm.iconClass||'fa fa-circle-o'"></i> <span ng-bind="itm.text"></span>
         </a>
       </h4>
     </div>
-  </div>
-  <div class="panel panel-default hide">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" id="heading{{$index}}" ng-if="itm.children&&itm.children.length">
       <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#sidebar-accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <i class="fa fa-key"></i> parent 1
+        <a role="button" data-toggle="collapse"
+            data-parent="#sidebar-accordion" ng-href="#collapse{{$index}}"
+            aria-expanded="true" aria-controls="collapse{{$index}}">
+          <i ng-class="itm.iconClass||'fa fa-circle-o'"></i> <span ng-bind="itm.text"></span>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+    <div id="collapse{{$index}}" class="panel-collapse collapse" role="tabpanel"
+        aria-labelledby="heading{{$index}}">
       <div class="panel-body">
         <ul class="list-group">
-          <li class="list-group-item active"><a><i class="fa fa-caret-right"></i> Cras justo odio</a></li>
-          <li class="list-group-item"><a ng-click=""><i class="fa fa-caret-right"></i> Dapibus ac facilisis in</a></li>
-          <li class="list-group-item"><a ng-click=""><i class="fa fa-caret-right"></i> Morbi leo risus</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Porta ac consectetur ac</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Vestibulum at eros</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default hide">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#sidebar-accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fa fa-lock"></i> parent 2
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      <div class="panel-body">
-        <ul class="list-group">
-          <li class="list-group-item active"><a><i class="fa fa-caret-right"></i> Cras justo odio</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Dapibus ac facilisis in</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Morbi leo risus</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Porta ac consectetur ac</a></li>
-          <li class="list-group-item"><a><i class="fa fa-caret-right"></i> Vestibulum at eros</a></li>
+          <li class="list-group-item" ng-repeat="subitm in itm.children">
+            <a  ng-click="subitm.templateUrl && openView(subitm, subitm.path)" href="javascript:void(0);">
+              <i ng-class="subitm.iconClass||'fa fa-caret-right'"></i> <span ng-bind="subitm.text"></span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
