--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -9,6 +9,18 @@ var sections = [{
 }, {
     name: 'admin_console.ds.edit',
     templateUrl: window.contextPath + '/admin_console/ds/edit.html'
+}, {
+    name: 'admin_console.res.pages.editpage',
+    templateUrl: window.contextPath + '/admin_console/res/pages/editpage.html'
+}, {
+    name: 'admin_console.res.pages.addpage',
+    templateUrl: window.contextPath + '/admin_console/res/pages/addpage.html'
+}, {
+    name: 'admin_console.res.pages.addscript',
+    templateUrl: window.contextPath + '/admin_console/res/pages/addscript.html'
+}, {
+    name: 'admin_console.res.pages.editscript',
+    templateUrl: window.contextPath + '/admin_console/res/pages/editscript.html'
 }];
 
 return sections;
