--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/editpage.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/editpage.html
@@ -1,27 +1,34 @@
-<div class="fill toolbar-panel" h-layout>
+<div class="fill widget-box" n-layout>
 #bundle('/general')
 #bundle('../res')
-<div class="pane ui-layout-north toolbar">
-    <div class="query-form" style="height:31px">
-        <div class="pull-left">
-            <label ng-bind="editingItem.pageUrl"></label>
-        </div>
-        <div class="pull-right" ng-if="!loading && !isNothing(editingItem.page)">
-            <button ng-disabled="savingPage" class="btn btn-xs btn-success" ng-click="savePageContent(editingItem)">
-                <i class="fa fa-save"></i> #text('save')
-            </button>
-            <button ng-disabled="savingPage" class="btn btn-xs btn-warning" ng-click="getPageContent(editingItem)">
-                <i class="fa fa-undo"></i> #text('res.rollback')
-            </button>
-        </div>
-        <div class="clearfix"></div>
+<div class="pane ui-layout-north widget-title nomargin">
+    <span class="icon">
+        <i class="fa fa-file-o"></i>
+    </span>
+    <h5 ng-bind="editingItem.pageUrl"></h5>
+</div>
+
+<div class="pane ui-layout-center auto-scroll container-fluid widget-content nopadding">
+    <h3 class="loading col-xs-12" ng-if="loadingPage">#text('loading')</h3>
+    <div ng-if="!loadingPage" class="col-xs-12 codemirror-container">
+        <div code-mirror ng-model="editingItem.page"></div>
     </div>
 </div>
 
-<div class="pane ui-layout-center auto-scroll container-fluid">
-    <h3 class="loading col-xs-12" ng-if="loadingPage">#text('loading')</h3>
-    <div ng-if="!loadingPage" class="col-xs-12 codemirror-container">
-        <div code-mirror="pageEditorConfig" ng-model="editingItem.page"></div>
+<div class="pane ui-layout-south text-center widget-footer">
+    <div class="buttons" ng-if="!loading && !isNothing(editingItem.page)">
+        <button ng-disabled="savingPage" class="btn btn-xs btn-success" ng-click="savePageContent(editingItem)">
+            <i class="fa fa-save"></i> #text('save')
+        </button>
+        &nbsp;
+        <button ng-disabled="savingPage" class="btn btn-xs btn-warning" ng-click="getPageContent(editingItem)">
+            <i class="fa fa-undo"></i> #text('res.rollback')
+        </button>
+        &nbsp;
+        <button class="btn btn-xs btn-default" ng-click="goback();">
+            <i class="fa fa-reload"></i>
+            #text('goback')
+        </button>
     </div>
 </div>
 #end
