--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/addpage.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/addpage.html
@@ -1,11 +1,11 @@
-<div class="fill widget-box" n-layout>
+<div class="fill widget-box nomargin" n-layout>
 #bundle('/general')
 #bundle('../res')
 <div class="pane ui-layout-north widget-title nomargin">
     <span class="icon">
         <i class="fa fa-file-o"></i>
     </span>
-    <h5>#text('pages.add')</h5>
+    <h5>#text('pages.addpage')</h5>
 </div>
 
 <div class="ui-layout-center widget-content">
