--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/addscript.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/addscript.html
@@ -1,6 +1,13 @@
-<div>
+<div class="fill widget-box nomargin" n-layout>
 #bundle('/general')
 #bundle('../res')
+<div class="pane ui-layout-north widget-title nomargin">
+    <span class="icon">
+        <i class="fa fa-file-o"></i>
+    </span>
+    <h5>#text('pages.addscript')</h5>
+</div>
+<div class="ui-layout-center widget-content">
     <form name="editingForm" class="form form-horizontal container-fluid">
         <div class="form-group">
             <label class="col-sm-3 control-label no-padding-right" for="itm_path">#text('pages.scripturl')</label>
@@ -15,6 +22,20 @@
             </div>
         </div>
     </form>
+</div>
+<div class="ui-layout-south widget-footer text-center">
+    <div class="buttons">
+        <button ng-disabled="editingForm.$invalid" class="btn btn-xs btn-success" ng-click="saveNewScript();">
+            <i class="fa fa-save"></i>
+            #text('save')
+        </button>
+        &nbsp;
+        <button class="btn btn-xs btn-default" ng-click="goback();">
+            <i class="fa fa-reload"></i>
+            #text('goback')
+        </button>
+    </div>
+</div>
 #end
 #end
 </div>
