--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/editpage.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/res/pages/editpage.html
@@ -1,11 +1,11 @@
-<div class="fill widget-box" n-layout>
+<div class="fill widget-box nomargin" n-layout>
 #bundle('/general')
 #bundle('../res')
 <div class="pane ui-layout-north widget-title nomargin">
     <span class="icon">
         <i class="fa fa-file-o"></i>
     </span>
-    <h5 ng-bind="editingItem.pageUrl"></h5>
+    <h5>#text('pages.editpage') - <span>ng-bind="editingItem.pageUrl"</span></h5>
 </div>
 
 <div class="pane ui-layout-center auto-scroll container-fluid widget-content nopadding">
