[admin]: Added built-in account manager page, and api controller.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/ds.html
@@ -13,7 +13,7 @@
                 #text('add')
             </button>
             <button class="btn btn-xs btn-primary" ng-click="write();">
-                <i class="fa fa-plus"></i>
+                <i class="fa fa-download"></i>
                 #text('ds.write.config')
             </button>
         </div>
