--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/builtin/accounts.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/builtin/accounts.html
@@ -2,22 +2,6 @@
 #bundle('menu')
 #bundle()
 <div class="widget-box nomargin" n-layout>
-    <div class="widget-title ui-layout-north">
-        <span class="icon">
-            <i class="fa fa-table"></i>
-        </span>
-        <h5>#text('menu.builtin.accounts')</h5>
-        <div class="buttons">
-            <button class="btn btn-xs btn-success" ng-click="add();">
-                <i class="fa fa-plus"></i>
-                #text('add')
-            </button>
-            <button class="btn btn-xs btn-primary" ng-click="applyDataSources();">
-                <i class="fa fa-refresh"></i>
-                #text('builtin.account.apply')
-            </button>
-        </div>
-    </div>
     <div class="widget-content nopadding ui-layout-center auto-scroll">
         <table class="table table-bordered table-striped">
         <thead>
@@ -28,19 +12,43 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-if="!ds.result || !ds.result.length">
+            <tr ng-if="!edses.result || !edses.result.length">
                 <td colspan="7">#text('nothing')</td>
             </tr>
             <tr ng-repeat="eds in edses.result">
                 <td ng-bind="$index + 1">#</td>
                 <td class="ops">
-                    <a class="text-primary" href="javascript:void(0)" title="#text('builtin.accounts.list')" ng-click="viewAccounts(ds)"><i class="fa fa-list"></i></a>
-                    <a class="text-danger" href="javascript:void(0)" title="#text('remove')" ng-click="remove(ds)"><i class="fa fa-minus"></i></a>
+                    <a class="text-primary" href="javascript:void(0)" title="#text('builtin.accounts.list')" ng-click="viewAccounts(eds)"><i class="fa fa-list"></i></a>
+                    <a class="text-danger" href="javascript:void(0)" title="#text('remove')" ng-click="remove(eds)"><i class="fa fa-minus"></i></a>
                 </td>
                 <td ng-bind="eds.dataSourceName">dataSourceName</td>
             </tr>
         </tbody>
         </table>
+    </div>
+    <div class="widget-title ui-layout-north">
+        <span class="icon">
+            <i class="fa fa-table"></i>
+        </span>
+        <h5>#text('menu.builtin.accounts')</h5>
+        <div class="buttons">
+            <div class="dropdown" style="display: inline;">
+                <button ng-disabled="!intersects.length" class="btn btn-xs btn-success dropdown-toggle" data-toggle="dropdown">
+                    <i class="fa fa-plus"></i>
+                    #text('add')
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li ng-repeat="ds in intersects">
+                        <a href="#" ng-click="addDs(ds)"><span ng-bind="ds.name"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <button class="btn btn-xs btn-primary" ng-click="applyDataSources();">
+                <i class="fa fa-refresh"></i>
+                #text('builtin.account.apply')
+            </button>
+        </div>
     </div>
 </div>
 #end
