[admin]: Added accounts page for specific data source.

--- a/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
+++ b/nutz-tpl-admin/src/main/resources/NUTZ-RES/admin_console/sections.js.html
@@ -10,6 +10,9 @@ var sections = [{
     name: 'admin_console.ds.edit',
     templateUrl: window.contextPath + '/admin_console/ds/edit.html'
 }, {
+    name: 'admin_console.builtin.accounts.page',
+    templateUrl: window.contextPath + '/admin_console/builtin/account-page.html'
+}, {
     name: 'admin_console.res.pages.editpage',
     templateUrl: window.contextPath + '/admin_console/res/pages/editpage.html'
 }, {
